slurm-5118677_5.out
/var/spool/slurm/slurmd/job5118677/slurm_script: line 9: /home/s/sutton/njqgame/RLENV/bin/activate: No such file or directory
5 0.2500000000 0.00000 16.0000000000 0.90000 0.10000 1.00000 20 100 1
Current working directory is /gpfs/fs0/scratch/s/sutton/njqgame/OffpolicyAlgorithms
Running on hostname nia1312.scinet.local

Starting run at: Wed Apr  7 14:06:18 EDT 2021
  File "Learning.py", line 12
    def learn(config: Configuration):
                    ^
SyntaxError: invalid syntax
Program test finished with exit code 1 at: Wed Apr  7 14:06:18 EDT 2021
